# aretius

./: README.md  pyproject.toml
aretius/: __main__.py  executor.py  main.py
scripts/: csv2flat.py
tests/: flat_state.json  test_against_duckdb.py  test_commands.json  test_load.py
