[tool.poetry]
name = "aretius"
version = "0.1.0"
description = ""
authors = ["jbm <john.b.mains@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.6.0"
result = "^0.16.1"
pydantic = "^2.6.4"
pandas = "^2.2.1"
duckdb = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
